# SocksFusion

./: .gitignore  README.md  README.ru.md  SocksFusion.cabal  stack.yaml
agent/: .gitignore  agent.cabal
agent/cbits/: termops.c
agent/doc/: dialogs.graphml
agent/include/: termops.h
agent/linux/Agent/Frontend/Console/: Internal.hsc
agent/res/: rootCert.pem
agent/src/: Agent.hs
agent/src/Agent/: Backend.hs  Console.hs  Frontend.hs  Types.hs  UI.hs
agent/src/Agent/Frontend/: Console.hs
agent/src/Agent/UI/: Core.hs
agent/test/: Test.hs
agent/windows/Agent/Frontend/Console/: Internal.hsc
doc/: README.md
res/: Config.hs  publicCert.pem
socksfusion/: SocksFusion.cabal
socksfusion/src/Network/: Socks5.hs  SocksFusion.hs
socksfusion/test/: Test.hs
src/: Agent.hs
src/Network/: Socks5.hs  SocksFusion.hs
terminal-size/: terminal-size.cabal
terminal-size/include/: ioctl-types.h
terminal-size/posix/System/Console/Terminal/: Size.hsc
terminal-size/src/System/Console/Terminal/Size/: Types.hs
terminal-size/windows/System/Console/Terminal/: Size.hsc
