name:          SocksFusion
version:       1.3
stability:     stable on all operating systems
synopsis:      Reverse socks server based on PortFusion package
description:   Reverse socks server based on PortFusion package
license:       GPL-3
license-file:  LICENSE
category:      System, Network,
build-type:    Simple
maintainer:    Stepanov Boris (bstepanov@ptsecurity.com)
cabal-version: >= 1.6


flag threaded
    description: use threaded runtime
    default:     True


flag static
    description: enable fully static linking
    default:     False


flag llvm
    description: compile via LLVM
    default:     False

flag m32
    description: compile for x86
    default:     False

flag cmd
    description: pass agent key through command line
    default:     False

library
    hs-source-dirs:  src/Network
    build-depends:   base       >= 4 && <= 5
                   , binary     >= 0.7.5
                   , bytestring >= 0.10.8
                   , tls        >= 1.3.8
                   , x509-store >= 1.6.2
                   , data-default-class >= 0.1.2
                   , time >= 1.6

    ghc-options:     -O2 -Wall -Werror
    if os(windows)
      build-depends: network    >= 2.3.0.13
    else
      build-depends: network    -any

    if flag(llvm)
      ghc-options:   -fllvm -optlo-O3

    if flag(m32)
      ghc-options:   -optc-m32 -opta-m32 -optl-m32

    if flag(static)
      ghc-options:   -static
      ld-options:    -static -pthread
      extra-libraries: crypto, dl, z

executable Agent
    hs-source-dirs:  src, res
    main-is:         Agent.hs
    build-depends:   file-embed >= 0.0.10
    other-modules:   Network.SocksFusion
                   , Network.Socks5
                   , Config
    buildable:       True

    ghc-options:     -O2 -Wall -Werror

    if flag(threaded) && !os(windows) && !arch(arm)
      ghc-options:   -threaded -rtsopts

    if flag(static)
      ghc-options:   -static
      ld-options:    -static -pthread
      extra-libraries: crypto, dl, z

    if flag(llvm)
      ghc-options:   -fllvm -optlo-O3

    if flag(m32)
      ghc-options:   -optc-m32 -opta-m32 -optl-m32

    if flag(cmd)
      cpp-options:   -DCMD
