name:                  agent
version:               1.6.2
stability:             stable on all operating systems
synopsis:              BBS saas agent
license:               GPL-3
license-file:          LICENSE
category:              System, Network
maintainer:            Stepanov Boris (bstepanov@ptsecurity.com)
build-type:            Simple
tested-with:           GHC == 8.6.3
cabal-version:         >= 1.24
bug-reports:           https://github.com/PositiveTechnologies/SocksFusion/issues

source-repository head
  type:                git
  location:            git://github.com/PositiveTechnologies/SocksFusion
  subdir:              agent

library
  exposed-modules:     Agent.Types
                     , Agent.UI
                     , Agent.UI.Core
                     , Agent.Backend
                     , Agent.Frontend
                     , Agent.Frontend.Console
                     , Agent.Frontend.Console.Internal
  other-modules:       Paths_agent
  autogen-modules:     Paths_agent
  hs-source-dirs:      src
  build-depends:       SocksFusion      >= 1.5
                     , aeson            >= 1.2
                     , ansi-terminal    >= 0.8.2
                     , ansi-wl-pprint   >= 0.6
                     , base             >= 4.10 && < 5
                     , binary           >= 0.8.5
                     , bytestring       >= 0.10.8
                     , connection       >= 0.2
                     , containers       >= 0.5.10
                     , data-default-class >= 0.1.2
                     , directory        >= 1.3
                     , filepath         >= 1.4
                     , file-embed       >= 0.0.10
                     , free             >= 5.0
                     , http-client      >= 0.5.13
                     , http-client-tls  >= 0.3.5
                     , http-types       >= 0.12
                     , microlens-platform >= 0.3.9
                     , mtl              >= 2.2
                     , process          >= 1.6
                     , stm              >= 2.4
                     , template-haskell >= 2.12
                     , text             >= 1.2
                     , terminal-size    >= 0.1
                     , time             >= 1.8
                     , tls              >= 1.4
                     , x509-store       >= 1.6
                     , x509-validation  >= 1.6
--                     , honk             -any
  build-tools:         hsc2hs
  if os(windows)
    hs-source-dirs:    windows
    build-depends:     Win32            >= 2.5
  if os(linux)
    hs-source-dirs:    linux
    build-depends:     unix             >= 2.7
    include-dirs:      include
    includes:          termops.h
    install-includes:  termops.h
    c-sources:         cbits/termops.c
  default-language:    Haskell2010
  default-extensions:  TupleSections, NoImplicitPrelude, LambdaCase, FlexibleInstances, FlexibleContexts
  cpp-options:         -DC_API="https://bbs.ptsecurity.com" -DC_PROXY="proxy.bbs.ptsecurity.com:443"

executable Agent
  main-is:             Agent.hs
  hs-source-dirs:      bin
  build-depends:       agent
                     , base             >= 4.10 && < 5
                     , bytestring       >= 0.10.8
                     , directory        >= 1.3
                     , mtl              >= 2.2
                     , optparse-applicative >= 0.14
                     , time             >= 1.8
  default-language:    Haskell2010
  default-extensions:  TupleSections, NoImplicitPrelude, LambdaCase, FlexibleInstances, FlexibleContexts
  ghc-options:         -threaded

Test-Suite tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      test
  build-depends:       SocksFusion      >= 1.5
                     , agent
                     , aeson            >= 1.2
                     , ansi-terminal    >= 0.8.2
                     , ansi-wl-pprint   >= 0.6
                     , base             >= 4.10 && < 5
                     , containers       >= 0.5.10
                     , data-default-class >= 0.1.2
                     , deepseq          >= 1.4
                     , microlens-platform >= 0.3.9
                     , mtl              >= 2.2
                     , random           >= 1.1
                     , stm              >= 2.4
                     , text             >= 1.2
                     , time             >= 1.8
                     , unix             >= 2.7
                     -- TESTS
                     , common           >= 2.0
                     , common-test      >= 2.0
                     , HUnit            >= 1.5
                     , QuickCheck       >= 2.9
                     , hspec            >= 2.4
  default-language:    Haskell2010
  default-extensions:  TupleSections, NoImplicitPrelude, LambdaCase, FlexibleInstances, FlexibleContexts
  ghc-options:         -threaded -O0
