name:                  SocksFusion
version:               1.5.0
stability:             stable on all operating systems
synopsis:              Reverse socks server
description:           Reverse socks server based on PortFusion package
license:               GPL-3
license-file:          LICENSE
category:              System, Network
maintainer:            Stepanov Boris (bstepanov@ptsecurity.com)
build-type:            Simple
tested-with:           GHC == 8.6.3
cabal-version:         >= 1.24
bug-reports:           https://github.com/PositiveTechnologies/SocksFusion/issues

source-repository head
  type:                git
  location:            git://github.com/PositiveTechnologies/SocksFusion
  subdir:              socksfusion

library
  hs-source-dirs:      src
  exposed-modules:     Network.Socks5
                     , Network.SocksFusion
  other-modules:       Paths_SocksFusion
  autogen-modules:     Paths_SocksFusion
  build-depends:       base             >= 4.10 && <= 5
                     , binary           >= 0.8.5
                     , bytestring       >= 0.10.8
                     , containers       >= 0.5.10
                     , cryptonite       >= 0.25
                     , data-default-class >= 0.1.2
                     , memory           >= 0.14
                     , mtl              >= 2.2
                     , network          >= 2.6
                     , tls              >= 1.4
                     , stm              >= 2.4
  default-language:    Haskell2010

Test-Suite tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      test
  build-depends:       SocksFusion
                     , base             >= 4.10 && < 5
                     , binary           >= 0.8.5
                     , bytestring       >= 0.10.8
                     , mtl              >= 2.2
                     , network          >= 2.6
                     -- TESTS
                     , common           >= 2.0
                     , common-test      >= 2.0
                     , HUnit            >= 1.5
                     , QuickCheck       >= 2.9
                     , hspec            >= 2.4
  default-language:    Haskell2010
  ghc-options:         -O0
